# notificador

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: config.py  handlers.py  main.py  mongodb.py  rabbitmq.py  routes.py  service.py
